[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/evil-maze-guy.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 14, 1, 1 )
flag_disable_z = true
spread = 10.0
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 25.0
radial_accel_random = 0.5
scale = 5.0
scale_random = 0.36

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.8296, 14.8104 )

[sub_resource type="Curve" id=3]
max_value = 100.0
_data = [ Vector2( 0.25, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.285714, 69.2045 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 14, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
initial_velocity_random = 1.0
angular_velocity = 10.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 30.0
radial_accel_random = 1.0
damping_curve = SubResource( 4 )
scale = 5.0
scale_random = 0.36

[node name="Enemy" type="KinematicBody2D" groups=[
"enemies",
]]
script = ExtResource( 2 )

[node name="TrailParticles" type="Particles2D" parent="."]
position = Vector2( 0, 15 )
amount = 7
lifetime = 0.7
speed_scale = 4.0
explosiveness = 0.05
randomness = 1.0
process_material = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="DeathParticles" type="Particles2D" parent="."]
emitting = false
amount = 30
lifetime = 5.0
one_shot = true
speed_scale = 5.0
explosiveness = 0.9
randomness = 1.0
process_material = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
